--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@japa/runner": "^4.2.0",
     "@swc/core": "1.11.24",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^22.15.18",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
@@ -63,10 +64,13 @@
     "@adonisjs/session": "^7.5.1",
     "@adonisjs/shield": "^8.2.0",
     "@adonisjs/static": "^1.1.1",
+    "@adonisjs/transmit": "^2.0.2",
+    "@adonisjs/transmit-client": "^1.1.0",
     "@adonisjs/vite": "^4.0.0",
     "@inertiajs/react": "^2.3.15",
     "@vinejs/vine": "^3.0.1",
     "edge.js": "^6.2.1",
+    "luxon": "^3.7.2",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "reflect-metadata": "^0.2.2"
